syntax = "proto3";

package lightops.type;

option csharp_namespace = "LightOps.Commerce.Proto.Types";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "Protos/type/image.proto";

message CategoryProto {
  // Globally unique identifier, eg: gid://Category/1000
  string id = 1;

  // Globally unique identifier of parent, 'gid://' if none
  string parent_id = 2;

  // A human-friendly unique string for the category
  string handle = 3;

  // The title of the category
  string title = 4;

  // The url of the category
  string url = 5;

  // The type of the category
  string type = 6;

  // The description of the category
  string description = 7;

  // The timestamp of category creation
  google.protobuf.Timestamp created_at = 8;

  // The timestamp of the latest category update
  google.protobuf.Timestamp updated_at = 9;

  // The primary image of the category
  lightops.type.ImageProto primary_image = 10;
}
